# QuantPipe

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  app.py  bootstrap.py  pyproject.toml  quantfinance_build_plan.md  quantfinance_kickoff_week1.md  quantfinance_pipeline_outline.md  setup_autoconnect.ps1
.streamlit/: config.toml
backtest/: __init__.py  canary.py  engine.py  tearsheet.py  walk_forward.py
config/: settings.py  universes.py
data_adapters/: __init__.py  alphavantage_adapter.py  base.py  bls_adapter.py  ccxt_adapter.py  commodities_adapter.py  fred_adapter.py  worldbank_adapter.py  yfinance_adapter.py
deploy/: add_peer.sh  install_runner.sh  setup_server.sh  update.sh
execution/: __init__.py  base.py  ccxt_broker.py  ibkr_adapter.py  order_journal.py  paper_broker.py  reconciler.py  trader.py  trading_log.py
features/: __init__.py  canonical.py  compute.py
mobile/: api.py
orchestration/: _halt.py  backfill_history.py  generate_signals.py  health_check_strategies.py  ingest_daily.py  pull_earnings.py  pull_fred.py  pull_macro.py  rebalance.py  run_pipeline.bat  run_pipeline.py  run_rebalance.bat  setup_scheduler.py
portfolio/: __init__.py  _backtest_cache.py  covariance.py  multi_strategy.py  optimizer.py
reports/: _theme.py  data_lab.py  deployment_dashboard.py  factor_analysis_dashboard.py  health_dashboard.py  instructions.py  kalman_dashboard.py  live_trading_dashboard.py  monte_carlo_dashboard.py  multi_strategy_dashboard.py  paper_trading_dashboard.py  pdf_export.py  performance_dashboard.py  portfolio_dashboard.py  research_dashboard.py  signal_analysis_dashboard.py  strategy_lab.py  time_series_dashboard.py  walk_forward_dashboard.py
research/: __init__.py  factor_analysis.py  kalman_filter.py  long_memory.py  monte_carlo.py  regime_classifier.py  signal_scanner.py  spectral.py  walk_forward_runner.py
risk/: __init__.py  attribution.py  engine.py  (+2 more)
(+72 files in other folders)
