[project]
name = "quantpipe"
version = "0.1.0"
description = "End-to-end quantitative finance pipeline: ingestion, features, research, backtesting, portfolio, risk, execution, and reporting."
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "yfinance>=0.2.50",
    "ccxt>=4.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.9.0",
    "filelock>=3.14.0",
    "scikit-learn>=1.5.0",
    "streamlit-ace>=0.1.1",
    "reportlab>=4.4.10",
    "kaleido>=1.2.0",
]

[project.optional-dependencies]
backtest = [
    "vectorbt>=0.26.0",
]
portfolio = [
    "cvxpy>=1.5.0",
    "PyPortfolioOpt>=1.5.0",
]
execution = [
    "ib_insync>=0.9.86",
]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "network: marks tests that require live network access (deselect with -m 'not network')",
]

# Run tests via: .venv/Scripts/python.exe -m pytest
# (uv run pytest may resolve to system Python on Windows if VIRTUAL_ENV is set externally)

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "data_adapters",
    "storage",
    "features",
    "signals",
    "backtest",
    "portfolio",
    "risk",
    "execution",
    "orchestration",
    "reports",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
